# NumericalMethods

./: CMakeLists.txt
Methods/: Methods.cpp  bisection.cpp  bisection.h  cubic_spline.cpp  cubic_spline.h  falsi.cpp  falsi.h  functions.cpp  functions.h  gauss.cpp  gauss.h  golden_ratio.cpp  golden_ratio.h  lagrange.cpp  lagrange.h  muller.cpp  muller.h  newton_interpolation.cpp  newton_interpolation.h  newton_raphson.cpp  newton_raphson.h
